# speedFP

./: .gitignore  CMakeLists.txt  README.md  benchmark.h  bulkrun.txt  crtp.cpp  crtp_pricer.cpp  derived_pricer.cpp  derived_pricer_no_virtual.cpp  derived_pricer_with_virtual_unused.cpp  derived_pricer_with_virtual_used.cpp  design10_fat_interface_with_pricer.cpp  design11_crtp_with_pricer.cpp  design1_virtual  design1_virtual.cpp  design2_dynamic_cast  design2_dynamic_cast.cpp  design3_static_cast  design3_static_cast.cpp  design4_derived_pricer  design4_derived_pricer.cpp  design5_fat_interface  design5_fat_interface.cpp  design6_crtp  design6_crtp.cpp  design7_dynamic_cast_in_subpricer.cpp  design8_static_cast_in_subpricer.cpp  design9_virtual_with_pricer.cpp  dynamic_cast_pricer.cpp  dynamic_subpricer.cpp  fat_interface.cpp  fat_interface_pricer.cpp  main.cpp  rename_files.sh  run_benchmarks.ps1  run_benchmarks.sh  run_design.sh  static_cast_pricer.cpp  static_subpricer.cpp  virtual_function.cpp  (+1 more)
